# PongEnhanced_4ITA

./: Cargo.toml  settings.json
.cargo/: config.toml
src/:  merge.sh  main.rs  merge.bat  merged.rs  settings.json
src/bundles/: area.rs  ball.rs  camera.rs  division_line.rs  mod.rs  paddle.rs  player.rs  wall.rs
src/bundles/gameplay/: area.rs  ball.rs  camera.rs  division_line.rs  goal.rs  mod.rs  paddle.rs  wall.rs
src/bundles/ui/: button.rs  container.rs  label.rs  main_menu.rs  menu.rs  menu_section.rs  mod.rs  offline_menu.rs  online_menu.rs  option_selector.rs  settings_menu.rs  widgets.rs
src/components/: area.rs  area_shape.rs  ball.rs  controlled_paddle.rs  goal.rs  mod.rs  paddle.rs  player.rs  player_controls.rs  side.rs  team.rs
src/components/gameplay/: area.rs  division_line.rs  game.rs  game_mode.rs  game_modes.rs  goal.rs  mod.rs  paddle.rs  player_health.rs  score_text.rs  team.rs  wall.rs
src/components/ui/: button.rs  effects.rs  in_game.rs  main_menu.rs  menu.rs  menu_button.rs  mod.rs  navigation.rs  widgets.rs
src/events/: gameplay.rs  mod.rs  widgets.rs
src/events/ui/: widgets.rs
src/game/: ball.rs  mod.rs  paddle.rs  player.rs
src/models/: mod.rs
src/models/game/: area.rs  fullscreen.rs  gameplay.rs  mod.rs  settings.rs
src/models/ui/: option.rs
src/networking/: client.rs  mod.rs  protocol.rs  server.rs  shared.rs
src/plugins/: game_core.rs  game_ui.rs  mod.rs  state_persistence.rs
src/resources/: controls.rs  game_config.rs  mod.rs  player_controls.rs
src/resources/game/: controls.rs  game_config.rs  mod.rs
src/resources/gameplay/: controls.rs  game_config.rs  mod.rs
src/resources/ui/: navigation.rs
src/systems/: gameplay.rs  handle_gamepads.rs  handle_scoring.rs  mod.rs  movement.rs
src/systems/gameplay/: handle_gamepads.rs  handle_scoring.rs  mod.rs  movement.rs  online.rs
src/systems/settings/: mod.rs  monitor.rs  persistance.rs  persistence.rs
src/systems/ui/: buttons.rs  main_menu.rs  menu.rs  mod.rs  navigation.rs  selectors.rs  widgets.rs
src/traits/game/: settings.rs
src/utils/: mod.rs  screen.rs  text.rs
