[package]
name = "PongEnhanced"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" , default-features = false, features = [
    "bevy_dev_tools",
    "experimental_bevy_ui_widgets",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "wayland",
    "bevy_ui_render",
    "serialize",
    "bevy_input_focus",
    "webgl2",
    "web",
    "x11",
    "bevy_winit",
    "webgpu",
    "multi_threaded",
]}

avian2d = { version = "0.4.1", default-features = false, features = [
    "2d",
    "serialize",
    "parallel"
]}

leafwing-input-manager = "0.19.0"

lightyear = { version = "0.25.5", default-features = false, features = [
    "avian2d",
    "leafwing",
    "interpolation",
    "client",
    "server",
    "replication",
    "prediction",
    "netcode",
    "udp"
]}

derive_more = "2.1.1"
erased-serde = "0.4.9"
bevy_tween = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bevy_light_2d = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }

[lib]
name = "pong_enhanced_lib"
crate-type = ["cdylib", "rlib"]
